# cararth_uiux

./: .env  .env.example  .gitignore  .replit  404_AUDIT_SUMMARY.md  AETHER_ACCEPTANCE_REPORT.md  AETHER_AUDIT_2.0_BUILD_REPORT.md  AETHER_AUDIT_ACCEPTANCE_REPORT.md  AETHER_LEARNING_MODE.md  AETHER_RUNBOOK.md  AUTOMATED_IMPORT_GUIDE.md  DATA_IMPORT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTIC_FINDINGS.md  DROPDOWN_BACKGROUND_FIX.md  GOOGLE_SIGNIN_SETUP.md  IMPORT_SAFETY_GUIDE.md  LIGHTHOUSE_TESTING_GUIDE.md  LLAMA_FINETUNING_GUIDE.md  LLAMA_TEST_QUICKSTART.md  NAVBAR_FIX.md  NEWS_ENHANCER_README.md  POST_NOT_FOUND_FIX.md  PRE_PRODUCTION_TEST_RESULTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SETUP.md  README_AETHER.md  RTO_FEATURE_README.md  SELECT_DROPDOWN_FIX.md  SELL_PAGE_ROUTING_FIX.md  SELL_PAGE_VERIFICATION_FIX.md  SEO_BACKLINKS_SUMMARY.md  SEO_SOCIAL_SHARING_GUIDE.md  SOCIAL_MEDIA_BRANDING.md  START_WEBSITE.bat  UI_IMPROVEMENTS.md  VAHAN_RTO_LOOKUP_INTEGRATION.md  VOICE_SEARCH_AND_CTA_FIX.md  WHATSAPP_SHARE_FIX.md  cardekho-debug.html  (+21 more)
attached_assets/: Pasted--Best-Used-Car-Dealers-in-Hyderabad-2025-Top-15-Showrooms-Platform-Comparison-Locations-Comple-1763288093213_1763288093213.txt  Pasted--Best-Used-Car-Portals-in-India-2025-Complete-Comparison-of-Cars24-Spinny-CarWale-CardEkho-OLX-1763960377495_1763960377496.txt  Pasted--Best-Used-Cars-in-India-2025-Complete-Buyer-s-Guide-with-Prices-Models-Expert-Tips-Quick-A-1763270185226_1763270185226.txt  Pasted--Cararth-com-Cached-Search-System-This-script-shows-how-to--1757651425491_1757651425492.txt  (+78 more)
(+440 files in other folders)
