[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.67.0",
    "firecrawl-py>=4.3.6",
    "google-generativeai>=0.8.5",
    "openai>=1.107.3",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
